change password screen, force change password on init login. abstracts button styles to new file

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,6 +1,9 @@
-@import "_variables.scss";
+@import "_variables";
+@import "_buttons";
+
 @import "_navbar";
 @import "_onboard";
+@import "_cards";
 
 
 * {
