--- a/src/assets/_cards.scss
+++ b/src/assets/_cards.scss
@@ -7,14 +7,14 @@
 }
 
 .cardSmall {
-    width: 70%;
-    height: 70%;
+    width: 40%;
+    // height: 70%;
     padding: 3%;
 }
 
 
 .cardLarge {
     width: 70%;
-    height: 90%;
+    // height: 90%;
     padding: 3%;
 }
