--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -9,3 +9,16 @@ $lightGreen: #6FCF97;
 $lightRed: #EB5757;
 
 $companyName:$turqois;
+
+.center {
+    margin: 0 auto;
+    position: relative;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.w-80 {
+    width: 80%;
+}
