removes ui templates. onboarding redesign

--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -1,57 +1,49 @@
-.custom {
-  input {
-    outline: none !important;
-    box-shadow: none !important;
-  }
-  ul {
-    vertical-align: middle;
-    position: absolute;
-    right: 10%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+input {
+  outline: none !important;
+  box-shadow: none !important;
+}
 
-  li {
-    float: left;
-    padding-left: 30px;
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    cursor: pointer;
-    user-select: none;
+li {
+  float: left;
+  padding-right: 30px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  cursor: pointer;
+  user-select: none;
+  color: $darkGray;
+  opacity: 0.7;
+}
+
+.navbar {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+  position: relative;
+
+  a {
     color: $darkGray;
-  }
+    transition: all 0.1s ease-in-out;
 
-  .navbar {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
-    position: relative;
-
-    a {
-      color: $darkGray;
+    &:hover {
+      text-decoration: none;
+      color: $companyName;
       transition: all 0.1s ease-in-out;
-
-      &:hover {
-        text-decoration: none;
-        color: $companyName;
-        transition: all 0.1s ease-in-out;
-      }
     }
   }
+}
 
-  body {
-  }
+body {
+}
 
-  .compName {
-    font-family: "Lato", sans-serif;
-    font-weight: 700;
-    font-size: 40px;
-    color: $companyName;
-  }
+.compName {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  color: $companyName;
+}
 
-  .focus {
-    color: $companyName;
-  }
+.focus {
+  color: $companyName;
 }
