--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 // COLORS
 $turqois :#2292A4;
