--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 
 // COLORS
@@ -9,6 +9,7 @@ $lightGreen: #6FCF97;
 $lightRed: #EB5757;
 
 $companyName:$turqois;
+$darkNavbar: #393E41;
 
 .center {
     margin: 0 auto;
