refactors camelcase rotues naming

--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -136,7 +136,7 @@
       background-image: url("./icons/hvac.svg");
     }
 
-    .adminManagement {
+    .user-management {
       background-image: url("./icons/accountManagement.svg");
     }
 
