--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -39,6 +39,11 @@
   height: 100vh;
   width: 100%;
 
+  a {
+    padding: 0px !important; 
+    margin: 0px !important;
+  }
+
   .navContainer {
     &:hover {
       .navTitle {
