--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -47,10 +47,10 @@
   .navContainer {
     &:hover {
       .navTitle {
-        max-width: 240px;
+        max-width: 350px;
         transition: all 0.5s ease-in-out;
         padding-left: 15px;
-        padding-right: 15px;
+        padding-right: 45px;
       }
     }
 
@@ -137,7 +137,7 @@
       background-image: url("./icons/site.svg");
     }
 
-    .profiles {
+    .channel-templates {
       background-image: url("./icons/hvac.svg");
     }
 
