adds link in register-users route to navigate to the dashboard

--- a/src/assets/_cards.scss
+++ b/src/assets/_cards.scss
@@ -18,3 +18,11 @@
     // height: 90%;
     padding: 3%;
 }
+
+.dashboardLink {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  color: $companyName;
+  font-family: 'lato', sans-serif;
+}
