--- a/src/assets/_cards.scss
+++ b/src/assets/_cards.scss
@@ -7,16 +7,15 @@
 }
 
 .cardSmall {
-    width: 40%;
-    // height: 70%;
-    padding: 3%;
+  width: 40%;
+  // height: 70%;
+  padding: 3%;
 }
 
-
 .cardLarge {
-    width: 70%;
-    // height: 90%;
-    padding: 3%;
+  width: 70%;
+  // height: 90%;
+  padding: 3%;
 }
 
 .dashboardLink {
@@ -24,5 +23,5 @@
   text-align: center;
   margin-top: 20px;
   color: $companyName;
-  font-family: 'lato', sans-serif;
+  font-family: "lato", sans-serif;
 }
