--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,24 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
 
 // COLORS
-$turqois :#2292A4;
-$darkGray: #4B4B4B;
-$lightGray: #E5E5E5;
-$lightGreen: #6FCF97;
-$lightRed: #EB5757;
+$turqois: #2292a4;
+$darkGray: #4b4b4b;
+$lightGray: #e5e5e5;
+$lightGreen: #6fcf97;
+$lightRed: #eb5757;
 
-$companyName:$turqois;
-$darkNavbar: #393E41;
+$companyName: $turqois;
+$darkNavbar: #393e41;
 
 .center {
-    margin: 0 auto;
-    position: relative;
+  margin: 0 auto;
+  position: relative;
 }
 
 .w-full {
-    width: 100%;
+  width: 100%;
 }
 
 .w-80 {
-    width: 80%;
+  width: 80%;
 }
