partial scss refactor

--- a/src/assets/components/_navbar.scss
+++ b/src/assets/components/_navbar.scss
@@ -130,27 +130,27 @@
       background-size: 24px;
     }
     .home {
-      background-image: url("./icons/home.svg");
+      background-image: url("../icons/home.svg");
     }
 
     .sites {
-      background-image: url("./icons/site.svg");
+      background-image: url("../icons/site.svg");
     }
 
     .channel-templates {
-      background-image: url("./icons/hvac.svg");
+      background-image: url("../icons/hvac.svg");
     }
 
     .user-management {
-      background-image: url("./icons/accountManagement.svg");
+      background-image: url("../icons/accountManagement.svg");
     }
 
     .settings {
-      background-image: url("./icons/settings.svg");
+      background-image: url("../icons/settings.svg");
     }
 
     .logout {
-      background-image: url("./icons/logout.svg");
+      background-image: url("../icons/logout.svg");
     }
 
     .logoutItem {
