--- a/src/assets/designLanguage/_forms.scss
+++ b/src/assets/designLanguage/_forms.scss
@@ -1,3 +1,26 @@
+@mixin wideInput {
+  display: block;
+  border-width: 2px;
+  border-color: $lightGray;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
+  outline: 0px;
+  width: 100%;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  color: $darkGray;
+  opacity: 0.9;
+
+  &:required:valid {
+    border-bottom-color: $lightGreen;
+  }
+
+  &:required:invalid {
+    border-bottom-color: $lightRed;
+  }
+}
+
 .styledPrimaryInput {
   display: block;
   border-width: 2px;
