--- a/src/assets/designLanguage/_buttons.scss
+++ b/src/assets/designLanguage/_buttons.scss
@@ -9,6 +9,8 @@
   border-width: 2px;
   border-color: $companyName;
   transition: all 0.2s ease-in-out;
+  user-select: none;
+  cursor: pointer;
 
   &:hover {
     background-color: white;
@@ -30,6 +32,8 @@
   border-width: 2px;
   border-color: $companyName;
   transition: all 0.2s ease-in-out;
+  user-select: none;
+  cursor: pointer;
 
   &:hover {
     background-color: $companyName;
@@ -39,39 +43,3 @@
     transition: all 0.2s ease-in-out;
   }
 }
-
-// .dangerousButton {
-//   font-family: "Lato";
-//   padding: 9px;
-//   padding-left: 19px;
-//   padding-right: 19px;
-//   color: $lightRed;
-//   border-radius: 9px;
-//   border-width: 1px;
-//   border-color: $lightRed;
-//   transition: all 0.2s ease-in-out;
-//   text-align: center;
-
-//   &:hover {
-//     background-color: $lightRed;
-//     color: white;
-//     transform: scale(0.9, 0.9);
-//     transition: all 0.2s ease-in-out;
-//     cursor: pointer;
-//   }
-// }
-
-// .smallButton {
-//   width: 100px;
-// }
-
-// .splitButton {
-//   width: 45%;
-//   margin-left: 2.5%;
-//   margin-right: 2.5%;
-//   display: inline;
-// }
-
-// .registerUsersButton {
-//   margin-top: 10%;
-// }
