--- a/src/assets/designLanguage/_types.scss
+++ b/src/assets/designLanguage/_types.scss
@@ -4,6 +4,12 @@
   font-weight: 700;
 }
 
+@mixin smallTitle {
+  font-size: 20px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
 @mixin link {
   font-family: "Lato", sans-serif;
   color: $companyName;
