completed basic Content component

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,6 +1,5 @@
 @import "/designLanguage/_variables";
 @import "/designLanguage/_types";
-@import "/designLanguage/_sections";
 @import "/designLanguage/_buttons";
 @import "/designLanguage/_forms";
 @import "/designLanguage/_cards";
@@ -11,6 +10,7 @@
 @import "/components/_navbar";
 @import "/components/_onboard";
 @import "/components/_authCheck";
+@import "/components/_content";
 
 @import "/components/_dashboard";
 @import "/components/_sites";
