--- a/src/assets/components/_navbar.scss
+++ b/src/assets/components/_navbar.scss
@@ -130,7 +130,7 @@
       height: 24px;
       background-size: 24px;
     }
-    .home {
+    .dashboard {
       background-image: url("../icons/home.svg");
     }
 
@@ -138,11 +138,11 @@
       background-image: url("../icons/site.svg");
     }
 
-    .channel-templates {
+    .templates {
       background-image: url("../icons/hvac.svg");
     }
 
-    .user-management {
+    .users {
       background-image: url("../icons/accountManagement.svg");
     }
 
