basically complete navbar. Will need to scroll once the time comes

--- a/src/assets/designLanguage/_variables.scss
+++ b/src/assets/designLanguage/_variables.scss
@@ -6,6 +6,7 @@ $darkGray: #4b4b4b;
 $lightGray: #e5e5e5;
 $lightGreen: #6fcf97;
 $lightRed: #eb5757;
+$lightOrange: #f2994a;
 
 $companyName: $turqois;
 $darkNavbar: #393e41;
