--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -8,6 +8,7 @@
 @import "/components/_contactUs";
 @import "/components/_requestAccount";
 @import "/components/_navbar";
+@import "/components/_dynamicNavbar";
 @import "/components/_onboard";
 @import "/components/_authCheck";
 @import "/components/_content";
