--- a/src/assets/components/_content.scss
+++ b/src/assets/components/_content.scss
@@ -3,16 +3,16 @@
   padding-bottom: 0.5%;
   padding-right: 0.5%;
   width: 100%;
-  display: flex;
 
   .navbarSection {
     height: 100%;
+    float: left;
   }
 
   .rightSection {
-    width: 100%;
     height: 100%;
     overflow-y: scroll;
+    position: relative;
   }
 
   .headSection {
