content and navbar links now scroll without visible scrollbar

--- a/src/assets/components/_content.scss
+++ b/src/assets/components/_content.scss
@@ -11,7 +11,7 @@
 
   .rightSection {
     height: 100%;
-    overflow-y: scroll;
+    @include scrollWithoutScrollbar;
     position: relative;
   }
 
