--- a/src/assets/designLanguage/_variables.scss
+++ b/src/assets/designLanguage/_variables.scss
@@ -23,3 +23,12 @@ $darkNavbar: #393e41;
 .w-80 {
   width: 80%;
 }
+
+@mixin scrollWithoutScrollbar {
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 0 !important;
+  }
+  overflow: -moz-scrollbars-none;
+  ms-overflow-style: none;
+}
