--- a/src/assets/components/_navbar.scss
+++ b/src/assets/components/_navbar.scss
@@ -40,8 +40,8 @@
   // width: 100%;
 
   a {
-    padding: 0px !important;
-    margin: 0px !important;
+    padding: 0px;
+    margin: 0px;
   }
 
   .navContainer {
@@ -115,7 +115,7 @@
       padding-right: 0px;
       vertical-align: middle;
       font-family: "Lato", sans-serif;
-      font-weight: 300 !important;
+      font-weight: 300;
       letter-spacing: 1px;
     }
 
@@ -128,8 +128,8 @@
     }
 
     .navIcon {
-      width: 24px !important;
-      height: 24px !important;
+      width: 24px;
+      height: 24px;
       float: left;
       // background-size: 24px;
     }
