Added tab view styling

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -21,6 +21,8 @@
 @import "/components/_changePassword";
 @import "/components/_registerUsers";
 
+@import "/components/_tabview";
+
 * {
   overflow: hidden;
 }
