--- a/src/assets/components/_tabview.scss
+++ b/src/assets/components/_tabview.scss
@@ -1,6 +1,10 @@
 .tab-view {
+  padding-left: 8px;
+  padding-right: 8px;
   margin-left: 32px;
   margin-right: 32px;
+
+  border-bottom: 1px solid $lightGray;
 }
 
 .tab-item {
