refactors static and dynamic navbars to generate routes

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -21,6 +21,8 @@
 @import "/components/_settings";
 @import "/components/_changePassword";
 @import "/components/_registerUsers";
+@import "/components/_routes";
+@import "/components/_app";
 
 * {
   overflow: hidden;
