--- a/src/assets/components/_dynamicNavbar.scss
+++ b/src/assets/components/_dynamicNavbar.scss
@@ -1,8 +1,9 @@
 .dynamicNavbar {
   height: 100%;
   background-color: $turqois;
-  width: auto;
-  display: inline-block;
+  // width: auto;
+  // display: inline-block;
+  float: left;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 
