YADA-88 YADA-89 YADA-90 removed redundant Settings component

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -18,7 +18,7 @@
 @import "/components/_sites";
 @import "/components/_channelTemplates";
 @import "/components/_userManagement";
-@import "/components/_settings";
+@import "/components/_userSettings";
 @import "/components/_changePassword";
 @import "/components/_registerUsers";
 @import "/components/_routes";
