Started work on site cards

--- a/src/assets/designLanguage/_variables.scss
+++ b/src/assets/designLanguage/_variables.scss
@@ -4,6 +4,8 @@
 $turqois: #2292a4;
 $darkGray: #4b4b4b;
 $lightGray: #e5e5e5;
+$offWhite: #f5f5f5;
+$shadow: #c9c9c9;
 $lightGreen: #6fcf97;
 $lightRed: #eb5757;
 $lightOrange: #f2994a;
