--- a/src/assets/components/_dashboard.scss
+++ b/src/assets/components/_dashboard.scss
@@ -1,7 +1,39 @@
 .dashboard {
-  padding: 1%;
+  margin: 0 16px;
+  padding: 0;
+
+  width: 100%;
+  height: 100%;
+
   h1 {
     @include largeTitle;
     color: $companyName;
+  }
+
+  .card-container {
+    width: 100%;
+    height: 100%;
+
+    padding: 8px;
+
+    overflow: scroll;
+    justify-content: center;
+  }
+
+  .card {
+    margin: 16px 0;
+
+    filter: drop-shadow(2px 2px 1px $shadow);
+    border-radius: 8px;
+
+    border: 1px solid $lightGray;
+    background-color: $offWhite;
+
+    h3 {
+      margin: 8px 16px;
+      font-family: "Lato", sans-serif;
+      font-weight: 600;
+      font-size: 18pt;
+    }
   }
 }
