site equipment table, filterable, updated css to match figma as best as possible

--- a/src/assets/components/_sites.scss
+++ b/src/assets/components/_sites.scss
@@ -1,9 +1,10 @@
 .sites {
   margin: 0 16px;
+  // @include scrollWithoutScrollbar;
 
   height: 100%;
   h1 {
-    @include largeTitle;
-    color: $companyName;
+    @include mediumTitle;
+    color: $darkNavbar;
   }
 }
