--- a/src/assets/designLanguage/_variables.scss
+++ b/src/assets/designLanguage/_variables.scss
@@ -7,7 +7,8 @@ $lightGray: #e5e5e5;
 $lightGreen: #6fcf97;
 $lightRed: #eb5757;
 $lightOrange: #f2994a;
-
+$buttonLightOrange: #f4d3b4;
+$buttonDarkOrange: #d96c06;
 $companyName: $turqois;
 $darkNavbar: #393e41;
 
