--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -27,7 +27,8 @@
 @import "/components/_tabview";
 @import "/components/_animatedLogo";
 @import "/components/_siteEquipment";
-
+@import "/components/_table.scss";
+@import "/components/_button.scss";
 * {
   overflow: hidden;
 }
