--- a/src/assets/components/_tabview.scss
+++ b/src/assets/components/_tabview.scss
@@ -1,21 +1,22 @@
 .tab-view {
-  padding: 0 8px;
-  margin: 8px 32px;
-
+  margin-top: 8px;
+  margin-bottom: 32px;
   border-bottom: 1px solid $lightGray;
 }
 
 .tab-item {
-  font-size: 14pt;
-
-  margin: 0 16px;
+  font-size: 17px;
+  @include link;
+  margin-right: 16px;
+  color: $darkNavbar;
+  // padding-bottom: 10px;
 }
 
 .tab-item:hover {
-  color: $lightOrange;
+  color: $buttonDarkOrange;
 }
 
 .tab-item-selected {
-  color: $lightOrange;
-  border-bottom: 2px solid $lightOrange;
+  color: $buttonDarkOrange;
+  border-bottom: 2px solid $buttonDarkOrange;
 }
