--- a/src/assets/designLanguage/_types.scss
+++ b/src/assets/designLanguage/_types.scss
@@ -4,6 +4,12 @@
   font-weight: 700;
 }
 
+@mixin mediumTitle {
+  font-size: 40px;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+}
+
 @mixin mediumSmallTitle {
   font-size: 35px;
   font-family: "Lato", sans-serif;
