--- a/src/assets/components/_dashboard.scss
+++ b/src/assets/components/_dashboard.scss
@@ -2,7 +2,6 @@
   margin: 0 16px;
   padding: 0;
 
-  width: 100%;
   height: 100%;
 
   h1 {
@@ -35,5 +34,9 @@
       font-weight: 600;
       font-size: 18pt;
     }
+  }
+
+  .hidden {
+    display: none;
   }
 }
