--- a/src/components/Dashboard/statistic.scss
+++ b/src/components/Dashboard/statistic.scss
@@ -1,8 +1,18 @@
 @import "src/assets/designLanguage/variables";
 
 .statistic {
+  margin: 8px 16px;
+
+  vertical-align: middle;
+
+  line-height: 16pt;
+
   .statistic-value {
+    float: left;
+
+    margin-right: 8px;
+
     color: $turqois;
-    font-size: 14pt;
+    font-size: 16pt;
   }
 }
