Got logger tabs working.  Logger table implemented.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -29,6 +29,9 @@
 @import "/components/_siteEquipment";
 @import "/components/_table.scss";
 @import "/components/_button.scss";
+
+@import "/components/_loggerTab.scss";
+
 * {
   overflow: hidden;
 }
