--- a/src/assets/components/_dashboard.scss
+++ b/src/assets/components/_dashboard.scss
@@ -5,18 +5,22 @@
   height: 100%;
 
   h1 {
+    margin: 0 auto;
+    width: 650px;
+
     @include largeTitle;
     color: $companyName;
   }
 
   .card-container {
+    @include scrollWithoutScrollbar;
+
     width: 100%;
     height: 100%;
 
     padding: 8px;
 
     overflow: scroll;
-    justify-content: center;
   }
 
   .hidden {
