--- a/src/assets/components/_loggerTab.scss
+++ b/src/assets/components/_loggerTab.scss
@@ -1,14 +1,14 @@
 .loggerTab {
-
   .dataGrid {
+    z-index: 1;
     width: 100%;
     height: 700px;
     margin-bottom: 40px;
   }
-
 }
 
 .addLogger {
+  z-index: 1;
   float: right;
   color: white;
   background-color: $lightOrange;
@@ -17,19 +17,40 @@
   border-radius: 10px;
 }
 
-.loggerPicker {
-  margin-left: 50%;
-  width: 200px;
-  height: 200px;
+.loggerSelector {
+  display: flex;
+  flex-direction: column;
+  right: 1rem;
+  width: 20rem;
+  height: 80%;
   z-index: 2;
   position: absolute;
-  border: 2px dashed $turqois;
+  box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  background-color: $lightGray;
+  background-color: #f0f0f0;
 
   h1 {
+    padding-top: 2%;
     padding-left: 5%;
+    font-size: x-large;
+    font-weight: bold;
+  }
+
+  h2 {
     font-size: large;
     font-weight: bold;
+  }
+
+  .loggerCard {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: white;
+    border: 2px black dashed;
+    border-radius: 10px;
   }
 }
