--- a/src/assets/components/_dashboard.scss
+++ b/src/assets/components/_dashboard.scss
@@ -1,4 +1,7 @@
 .dashboard {
+    display: flex;
+    flex-flow: column;
+
     margin: 0 16px;
     padding: 0;
 
@@ -19,8 +22,6 @@
         height: 100%;
 
         padding: 8px;
-
-        overflow: scroll;
     }
 
     .hidden {
