--- a/src/components/Dashboard/searchbar.scss
+++ b/src/components/Dashboard/searchbar.scss
@@ -1,42 +1,42 @@
-@import "src/assets/designLanguage/variables";
+@import 'src/assets/designLanguage/variables';
 
 .searchbar {
-  display: flex;
+    display: flex;
 
-  margin: 0 auto;
+    margin: 0 auto;
 
-  width: 650px;
+    width: 700px;
 
-  filter: drop-shadow(2px 2px 1px $shadow);
-  border-radius: 8px;
-  border: 1px solid $lightGray;
-  background-color: $offWhite;
+    filter: drop-shadow(2px 2px 1px $shadow);
+    border-radius: 8px;
+    border: 1px solid $lightGray;
+    background-color: $offWhite;
 
-  svg {
-    margin: 8px;
+    svg {
+        margin: 8px;
 
-    fill: $turqois;
-  }
+        fill: $turqois;
+    }
 
-  input {
-    margin: 0;
-    padding: 8px 8px 8px 0;
+    input {
+        margin: 0;
+        padding: 8px 8px 8px 0;
 
-    width: 100%;
+        width: 100%;
 
-    background-color: transparent;
-    outline: none;
-  }
+        background-color: transparent;
+        outline: none;
+    }
 
-  .hint {
-    position: absolute;
-    margin: 8px 8px 8px 40px;
-    z-index: -1;
+    .hint {
+        position: absolute;
+        margin: 8px 8px 8px 40px;
+        z-index: -1;
 
-    color: $turqois;
-  }
+        color: $turqois;
+    }
 
-  .hidden {
-    display: none;
-  }
+    .hidden {
+        display: none;
+    }
 }
