--- a/src/assets/components/_sites.scss
+++ b/src/assets/components/_sites.scss
@@ -1,3 +1,5 @@
+@import '../designLanguage/dataGrid';
+
 .sites {
     margin: 0 16px;
     // @include scrollWithoutScrollbar;
@@ -6,5 +8,9 @@
     h1 {
         @include mediumTitle;
         color: $darkNavbar;
+    }
+
+    .data-grid {
+        @include dataGrid;
     }
 }
