Fixed things from Luke's comments.

--- a/src/assets/components/_siteEquipment.scss
+++ b/src/assets/components/_siteEquipment.scss
@@ -3,6 +3,11 @@
 
     margin: 8px 24px;
 
+    h1 {
+        font-size: x-large;
+        font-weight: bold;
+    }
+
     .message {
         @include mediumSmallTitle;
 
