--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -29,7 +29,7 @@
 @import 'components/_table.scss';
 @import 'components/_button.scss';
 
-@import '/components/_loggerTab.scss';
+@import 'components/_loggerTab.scss';
 
 * {
     overflow: hidden;
