--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -30,6 +30,7 @@
 @import 'components/_button.scss';
 
 @import 'components/_loggerTab.scss';
+@import 'components/_toggleSwitch.scss';
 
 * {
     overflow: hidden;
