--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -32,6 +32,8 @@
 @import 'components/_loggerTab.scss';
 @import 'components/_toggleSwitch.scss';
 
+@import 'bootstrap.scss';
+
 * {
     overflow: hidden;
 }
