--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -5,24 +5,24 @@
 @import 'designLanguage/_cards';
 @import 'designLanguage/_tables';
 
-@import "/components/_contactUs";
-@import "/components/_requestAccount";
-@import "/components/_staticNavbar";
-@import "/components/_dynamicNavbar";
-@import "/components/_onboard";
-@import "/components/_authCheck";
-@import "/components/_notFound";
-@import "/components/_content";
-@import "/components/_topRoutes";
-@import "/components/_dashboard";
-@import "/components/_sites";
-@import "/components/_channelTemplates";
-@import "/components/_userManagement";
-@import "/components/_userSettings";
-@import "/components/_changePassword";
-@import "/components/_registerUsers";
-@import "/components/_routes";
-@import "/components/_app";
+@import "components/_contactUs";
+@import "components/_requestAccount";
+@import "components/_staticNavbar";
+@import "components/_dynamicNavbar";
+@import "components/_onboard";
+@import "components/_authCheck";
+@import "components/_notFound";
+@import "components/_content";
+@import "components/_topRoutes";
+@import "components/_dashboard";
+@import "components/_sites";
+@import "components/_channelTemplates";
+@import "components/_userManagement";
+@import "components/_userSettings";
+@import "components/_changePassword";
+@import "components/_registerUsers";
+@import "components/_routes";
+@import "components/_app";
 
 * {
     overflow: hidden;
