--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -28,6 +28,8 @@
 @import 'components/_siteEquipment';
 @import 'components/_table.scss';
 @import 'components/_button.scss';
+@import 'components/privilegeToggle';
+@import 'components/accountControls';
 
 * {
     overflow: hidden;
