dashboard expands overtop of components

--- a/src/assets/components/_content.scss
+++ b/src/assets/components/_content.scss
@@ -13,6 +13,7 @@
         height: 100%;
         @include scrollWithoutScrollbar;
         position: relative;
+        margin-left: 60px;
     }
 
     .headSection {
