--- a/src/assets/components/_routes.scss
+++ b/src/assets/components/_routes.scss
@@ -3,3 +3,9 @@
     padding-top: 0.5%;
     padding-bottom: 0.5%;
 }
+
+.staticRoutes {
+    height: 100%;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
