--- a/src/assets/components/_dynamicNavbar.scss
+++ b/src/assets/components/_dynamicNavbar.scss
@@ -6,7 +6,7 @@
     float: left;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
+    margin-left: 60px;
     .navbarHeader {
         padding-top: 15px;
         padding-left: 10px;
