--- a/src/assets/components/_userManagement.scss
+++ b/src/assets/components/_userManagement.scss
@@ -8,4 +8,13 @@
     * {
         overflow: visible;
     }
+
+    .addUserButton {
+        width: 40px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: 0px;
+        // right: 0px;
+        position: relative;
+    }
 }
