refactors danger button styles

--- a/src/assets/components/_userSettings.scss
+++ b/src/assets/components/_userSettings.scss
@@ -17,9 +17,7 @@
     }
 
     .deleteBtn {
-        @include filledPrimaryButton;
-        background-color: $lightRed;
-        border-color: $lightRed;
+        @include filledDangerButton;
     }
 
     .pswdLink {
