adds password reset link to onboard and authCheck

--- a/src/assets/components/_authCheck.scss
+++ b/src/assets/components/_authCheck.scss
@@ -29,4 +29,10 @@
         @include floatingCard;
         @include cardSmall;
     }
+
+    .passwordResetLink {
+        text-align: center;
+        margin-top: 5px;
+        @include link;
+    }
 }
