--- a/src/assets/components/_onboard.scss
+++ b/src/assets/components/_onboard.scss
@@ -107,4 +107,10 @@
     .focus {
         color: $companyName;
     }
+
+    .passwordResetLink {
+        text-align: center;
+        margin-top: 5px;
+        @include link;
+    }
 }
