--- a/src/assets/components/_userManagement.scss
+++ b/src/assets/components/_userManagement.scss
@@ -14,7 +14,11 @@
         margin-bottom: 10px;
         margin-left: auto;
         margin-right: 0px;
-        // right: 0px;
         position: relative;
+    }
+
+    .dataGrid {
+        height: 80vh;
+        border-radius: 5px;
     }
 }
