Implemented remove logger button.

--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -12,3 +12,8 @@
     background-color: $buttonLightOrange;
     color: $buttonDarkOrange;
 }
+
+.warning {
+    background-color: $lightRed;
+    color: white;
+}
