--- a/src/assets/components/_loggerTab.scss
+++ b/src/assets/components/_loggerTab.scss
@@ -23,7 +23,7 @@
     right: 1rem;
     width: 20rem;
     height: 80%;
-    z-index: 2;
+    z-index: 1000;
     position: absolute;
     box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
@@ -75,25 +75,28 @@
         display: flex;
         flex-direction: column;
         overflow: visible;
-
-        .dropdown {
-            margin-top: 0.5rem;
-            overflow: visible;
-            z-index: 1000;
-
-            .dropdownMenu {
-                z-index: 1000;
-            }
-        }
     }
 
     .control {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+        overflow: visible;
+        margin-top: 0.25rem;
+        margin-bottom: 0.25rem;
 
         h2 {
             margin-right: 2rem;
+        }
+
+        .dropdown {
+            overflow: visible;
+            z-index: 2;
+
+            .dropdownMenu {
+                z-index: 2;
+            }
         }
     }
 
@@ -106,6 +109,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
 
     h2 {
         font-size: large;
