Started removing wildcard

--- a/src/assets/components/_routes.scss
+++ b/src/assets/components/_routes.scss
@@ -1,11 +1,17 @@
 .routes {
     height: 100%;
+
+    margin-left: 60px;
+
     padding-top: 0.5%;
     padding-bottom: 0.5%;
 }
 
 .staticRoutes {
     height: 100%;
-    padding-top: 7px;
-    padding-bottom: 7px;
+
+    margin-left: 60px;
+
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
