Can show and hide logger info.

--- a/src/assets/components/_button.scss
+++ b/src/assets/components/_button.scss
@@ -17,3 +17,10 @@
     background-color: $lightRed;
     color: white;
 }
+
+.loggerInfoShow {
+    background-color: $buttonDarkOrange;
+    color: white;
+    margin-bottom: 0.5rem;
+    width: fit-content;
+}
